--- a/class/Chalkpad/Chalkpadpro.html
+++ b/class/Chalkpad/Chalkpadpro.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylec.css">
     <title>Chalkpad Pro</title>
+    <link rel="icon" type="image/x-icon" href="download.png">
 </head>
 <header>
 </header>
